--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>To-do List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600&display=swap" rel="stylesheet">
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -11,7 +12,33 @@
     </script>
   </head>
   <body>
-
+    <div id="todoContainer">
+      <h1>COVID-19 todo list</h1>
+      <input class="taskContainer" type="text" name="" value="Add a new todo">
+      <ul>
+        <div class="taskContainer">
+          <div class="checkboxAndTask">
+            <span class="markComplete">check </span>
+            <li class="task">Find toilet paper</li>
+          </div>
+          <span class="delete">X</span>
+        </div>
+        <div class="taskContainer">
+          <div class="checkboxAndTask">
+            <span class="markComplete">check </span>
+            <li class="task">Stock up on frozen pizza</li>
+          </div>
+          <span class="delete">X</span>
+        </div>
+        <div class="taskContainer">
+          <div class="checkboxAndTask">
+            <span class="markComplete">check </span>
+            <li class="task">Invest in luxury pajamas</li>
+          </div>
+          <span class="delete">X</span>
+        </div>
+      </ul>
+    </div>
     <script type="text/javascript" src="assets/js/todos.js"></script>
   </body>
 </html>
