--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>To-do List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/todos.css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/652ee8d8cf.js" crossorigin="anonymous"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -18,24 +20,31 @@
       <ul>
         <div class="taskContainer">
           <div class="checkboxAndTask">
-            <span class="markComplete">check </span>
+            <i class="markComplete far fa-square"></i>
             <li class="task">Find toilet paper</li>
           </div>
-          <span class="delete">X</span>
+          <i class="delete fas fa-trash"></i>
         </div>
         <div class="taskContainer">
           <div class="checkboxAndTask">
-            <span class="markComplete">check </span>
-            <li class="task">Stock up on frozen pizza</li>
-          </div>
-          <span class="delete">X</span>
-        </div>
-        <div class="taskContainer">
-          <div class="checkboxAndTask">
-            <span class="markComplete">check </span>
+            <i class="markComplete far fa-square"></i>
             <li class="task">Invest in luxury pajamas</li>
           </div>
-          <span class="delete">X</span>
+          <i class="delete fas fa-trash"></i>
+        </div>
+        <div class="taskContainer">
+          <div class="checkboxAndTask">
+            <i class="markComplete far fa-square"></i>
+            <li class="task">Stock up on frozen pizzas</li>
+          </div>
+          <i class="delete fas fa-trash"></i>
+        </div>
+        <div class="taskContainer">
+          <div class="checkboxAndTask">
+            <i class="markComplete far fa-square"></i>
+            <li class="task">Don't murder your partner</li>
+          </div>
+          <i class="delete fas fa-trash"></i>
         </div>
       </ul>
     </div>
