--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <div id="todoContainer">
       <h1>COVID-19 todo list</h1>
-      <input class="taskContainer" type="text" name="" value="Add a new todo">
+
+      <input class="taskContainer" type="text" value="Add a new todo">
+
       <ul>
         <div class="taskContainer">
           <div class="checkboxAndTask">
@@ -47,7 +49,9 @@
           <i class="delete fas fa-trash"></i>
         </div>
       </ul>
+      
     </div>
+
     <script type="text/javascript" src="assets/js/todos.js"></script>
   </body>
 </html>
