Reveal delete upon hover

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="todoContainer">
       <h1>COVID-19 todo list</h1>
 
-      <input class="taskContainer" type="text" value="Add a new todo">
+      <input class="taskContainer" id="newTaskInput" type="text" value="Add a new todo">
 
       <ul>
         <div class="taskContainer">
@@ -49,7 +49,7 @@
           <i class="delete fas fa-trash"></i>
         </div>
       </ul>
-      
+
     </div>
 
     <script type="text/javascript" src="assets/js/todos.js"></script>
