Fix alignment issues

--- a/index.html
+++ b/index.html
@@ -16,42 +16,38 @@
   <body>
     <div id="todoContainer">
       <h1>COVID-19 todo list</h1>
-
       <input class="taskContainer" id="newTaskInput" type="text" value="Add a new todo">
-
       <ul>
-        <div class="taskContainer">
+        <li class="taskContainer">
           <div class="checkboxAndTask">
             <i class="markComplete far fa-square"></i>
-            <li class="task">Find toilet paper</li>
+            <span class="task">Find toilet paper</span>
           </div>
           <i class="delete fas fa-trash"></i>
-        </div>
-        <div class="taskContainer">
+        </li>
+        <li class="taskContainer">
           <div class="checkboxAndTask">
             <i class="markComplete far fa-square"></i>
-            <li class="task">Invest in luxury pajamas</li>
+            <span class="task">Invest in luxury pajamas</span>
           </div>
           <i class="delete fas fa-trash"></i>
-        </div>
-        <div class="taskContainer">
+        </li>
+        <li class="taskContainer">
           <div class="checkboxAndTask">
             <i class="markComplete far fa-square"></i>
-            <li class="task">Stock up on frozen pizzas</li>
+            <span class="task">Stock up on frozen pizzas  test test ets est ets es tes tdkj fsadkjfk jkkjjkjk kl jk lkj j kjjk kjl l jkljkl jkl jlkjkl jkl jk jkl jkl kj jk jkl jkljk jk jk jkl kjl jkl jkl jklkjl jkl jk jkk jlkj kkj lkklj kl</span>
           </div>
           <i class="delete fas fa-trash"></i>
-        </div>
-        <div class="taskContainer">
+        </li>
+        <li class="taskContainer">
           <div class="checkboxAndTask">
             <i class="markComplete far fa-square"></i>
-            <li class="task">Don't murder your partner</li>
+            <span class="task">Don't murder your partner</span>
           </div>
           <i class="delete fas fa-trash"></i>
-        </div>
+        </li>
       </ul>
-
     </div>
-
     <script type="text/javascript" src="assets/js/todos.js"></script>
   </body>
 </html>
